--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <!-- CSS STYLE -->
     <link rel="stylesheet" href="./css/main.css">
     <title>Palidroma e Pari e Dispari</title>
 </head>
 <body>
+    <div class="container">
+        <h1>Giochiamo</h1>
+    
+        <h2 id="utente"></h2>
+        <h2 id="num-utente"></h2>
+        <h2 id="num-bot"></h2>
+        <h2 id="totale"></h2>
+        <h2 id="winner"></h2>
+
+    </div>
+
 
 
 
