--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
 <body>
     <div class="container">
         <h1>Giochiamo</h1>
+        <div>
+            <h2 id="utente"></h2>
+            <h2 id="num-utente"></h2>
+            <h2 id="num-bot"></h2>
+            <h2 id="totale"></h2>
+            <h2 id="winner"></h2>
+        </div>
+
+
     
-        <h2 id="utente"></h2>
-        <h2 id="num-utente"></h2>
-        <h2 id="num-bot"></h2>
-        <h2 id="totale"></h2>
-        <h2 id="winner"></h2>
+
+        
 
     </div>
 
